test/files/neg/t12199.scala
// scalac: -Werror -Xlint

class C {
  val a: IndexedSeq[Int] = Array(1, 2, 3)
}
